--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,4 @@
 DS_Store
-git/
-node_modules/
-example/
-.*.swp
-.DS_Store
 .git
-.hg
-.npmrc
-.lock-wscript
-.svn
-.wafpickle-*
-config.gypi
-CVS
-npm-debug.log
+node_modules
+test
