--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-storage-apis",
   "description": "Make localstorage and sessionStorage easy to use.",
-  "version": "1.0.3",
+  "version": "0.0.1",
   "homepage": "https://github.com/SunSeekerX/web-storage-apis",
   "repository": {
     "type": "git",
@@ -9,7 +9,8 @@
   },
   "main": "dist/bundle.cjs.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "publish": "npm publish --access=public"
   },
   "author": "SunSeekerX",
   "license": "MIT",
