--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "git://github.com/SunSeekerX/web-storage-apis.git"
   },
-  "main": "dist/bundle.cjs.js",
+  "main": "dist/bundle.esm.js",
   "scripts": {
     "serve": "rollup -c --watch",
     "build": "rollup -c",
@@ -16,12 +16,8 @@
   "author": "SunSeekerX",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "babel-preset-es2015-rollup": "^3.0.0",
-    "rollup": "^2.3.3",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-filesize": "^6.2.1",
+    "rollup": "^2.7.2",
+    "rollup-plugin-filesize": "^7.0.0",
     "rollup-plugin-terser": "^5.3.0"
-  },
-  "dependencies": {}
+  }
 }
